<resources>

    <!--MainActivity_old strings-->

    <string name="app_name">Klasa 1A</string>
    <string name="this_week_on_duties">W tym tygodniu dyżurnymi są:</string>
    <string name="refresh">Odśwież</string>
    <string name="error_message">Błąd podczas pozyskiwania danych, spróbuj ponownie</string>
    <string name="dialog_download_new_version">Jest dostępna nowa wersja. Czy chcesz ją teraz pobrać?</string>
    <string name="download">Pobierz</string>
    <string name="cancel">Anuluj</string>
    <string name="this_week_lucky_numbers">W tym tygodniu szczęśliwe numerki to:</string>
    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="changelog_full_title">Lista zmian</string>
    <string name="changelog_title">Co nowego</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">Więcej…</string>
    <string name="kalendarz">Kalendarz</string>
    <string name="pobierz_nowa_wersje_recznie">Pobierz nową wersję ręcznie</string>
    <string name="whats_new">Co nowego…</string>
    <string name="tests_calendar">Kalendarz testów</string>
    <string name="toggle_button_open">Otwarte</string>
    <string name="toggle_button_close">Zamknięte</string>
    <string name="changing_room">Szatnia</string>
    <string name="door">Drzwi</string>

    <!--EnterApiKeyDialog strings-->

    <string name="klucz_api_z_emaila">Klucz api</string>
    <string name="continue_label">Kontynuuj</string>
    <string name="cancel_label">Anuluj</string>
    <string name="enter_api_key_you_got_on_your_email">Wprowadź klucz api, który otrzymałeś(aś) na Twój adres email. Bez tego, normalne działanie aplikacji będzie niemożliwe</string>

    <!--Preference strings-->

    <string name="isFirstRun_pref_key">isFirstRun</string>
    <string name="apiKey_pref_key">apiKey</string>
    <string name="countdown">Odliczanie</string>
    <string name="zero_time">00h:00m:00s</string>
    <string name="reset_api_key">Zresetuj klucz api</string>
    <string name="api_key_not_found">Podany klucz nie istnieje. W razie problemów, skontaktuj się z administratorem</string>
    <string name="login">Zaloguj się</string>
    <string name="api_key">Klucz api</string>

    <!--CountdownsActivity strings-->

    <string name="holidays">Wakacje</string>
    <string name="winter_holidays">Ferie</string>
    <string name="mature_exam">Matura</string>
    <string name="date_pattern" formatted="false">%d d  %d h  %d min</string>
    <string name="settings">Ustawienia</string>

</resources>
