<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh_white_24px"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/action_download_app_manually"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/pobierz_nowa_wersje_recznie" />

    <item
        android:id="@+id/action_show_changelog"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/whats_new" />

</menu>